objects/Attachment__c.object
<CustomObject>
    <description>Created for CR-20141216-8336.</description>
    <fields>
        <fullName>Attachment_Id__c</fullName>
        <description>Created for CR-20141216-8336</description>
        <label>Attachment Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Campaign__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Created for CR-20141216-8336</description>
        <label>Campaign</label>
        <referenceTo>Campaign</referenceTo>
        <relationshipLabel>Custom Attachments</relationshipLabel>
        <relationshipName>Custom_Attachments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Paper_Type__c</fullName>
        <description>Created for CR-20141216-8336.</description>
        <label>Paper Type</label>
        <picklist>
            <picklistValues>
                <fullName>Blank Letterhead Stock (23440A)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ABC Logo Letterhead (31158)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EAB Logo Letterhead (30355)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Page 1: ABC Letterhead (31158), Remainder: Blank Letterhead (23440A)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Stapled__c</fullName>
        <description>Created for CR-20150601-8980</description>
        <label>Stapled?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Text_Ink__c</fullName>
        <description>Created for CR-20150601-8980</description>
        <label>Text Ink</label>
        <picklist>
            <picklistValues>
                <fullName>B/W</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Color</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Text_Sides__c</fullName>
        <description>Created for CR-20150601-8980</description>
        <label>Text Sides</label>
        <picklist>
            <picklistValues>
                <fullName>1 sided</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2 sided</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>of_Pages__c</fullName>
        <description>Created for CR-20150601-8980</description>
        <label># of Pages</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Custom Attachment</label>
    <nameField>
        <displayFormat>Att-{000000}</displayFormat>
        <label>Custom Attachment Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Custom Attachments</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>